Small changes to sequel adapter
* Remove ActiveRecord from SequelPostgres, not needed
* Use config file for settings.
* Redo config file to be compatible with the Valkyrie adapter.
* Add some notes in README

--- a/config/metadata_adapters/sequel_postgres.yml
+++ b/config/metadata_adapters/sequel_postgres.yml
@@ -1,9 +1,7 @@
 enabled: true
 db: 
-  adapter: postgresql
   host: localhost
   port: 5433
-  database: valkyrie_benchmark_postgres
-  encoding: unicode
-  username: valkyrie_benchmark
+  database: valkyrie_benchmark_sequel_postgres
+  user: valkyrie_benchmark
   password: valkyrie_benchmark
